--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
 @charset "UTF-8";
-/*--------------------------------------------*/
-/*--------------------------------------------*/
-/*--------------------------------------------*/
-/*--------------------------------------------*/
 html,
 body {
   font-family: "SF Pro Display", sans-serif;
@@ -39,6 +35,55 @@ body {
 
 .main__sliderBanner {
   margin-top: 78px;
+}
+
+.slickDots .slick-dots {
+  margin-top: 15px;
+  text-align: center;
+}
+
+.slickDots .slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slickDots .slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  cursor: pointer;
+  color: transparent;
+  border: 0;
+  outline: none;
+  background: transparent;
+}
+
+.slickDots .slick-dots li.slick-active button:before {
+  opacity: .75;
+  color: black;
+}
+
+.slickDots .slick-dots li button:before {
+  font-family: 'slick';
+  font-size: 40px;
+  line-height: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  content: '•';
+  text-align: center;
+  opacity: .25;
+  color: black;
 }
 
 /*---------------HEADER-----------------------------*/
@@ -546,6 +591,7 @@ body {
 .popular__inner {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .filter-box {
@@ -555,6 +601,11 @@ body {
 
 .filter-item {
   margin-right: 50px;
+}
+
+.filter-item svg {
+  width: 0;
+  height: 0;
 }
 
 .filter-item:last-child {
@@ -1223,17 +1274,126 @@ body {
 }
 /*===========================600============================*/
 @media (max-width: 600px) {
+  .search__form-top {
+    white-space: normal;
+  }
+
+  /*---------------------------------------*/
+  ul.zg-ul-select {
+    border-radius: 2px;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 2em;
+    margin: 0;
+    padding: 0;
+  }
+  ul.zg-ul-select li {
+    border-radius: 3px;
+    display: none;
+    padding: 0.5em;
+  }
+  ul.zg-ul-select li.active {
+    align-items: center;
+    border: 1px solid #111;
+    border-radius: 3px;
+    box-shadow: 0 0 2px #aaa;
+    color: #111;
+    display: flex;
+    justify-content: space-between;
+  }
+  ul.zg-ul-select.active {
+    border: 1px solid #aaa;
+  }
+  ul.zg-ul-select.active li {
+    border: none;
+    box-shadow: none;
+    display: block;
+  }
+  ul.zg-ul-select.active li:hover {
+    background: #0074d9;
+  }
+  ul.zg-ul-select.active li.active {
+    background: #40a6ff;
+  }
+  ul.zg-ul-select.active li.active:hover {
+    background: #0074d9;
+  }
+
+  #selected--zg-ul-select {
+    align-items: center;
+    box-sizing: border-box;
+    color: #111;
+    display: flex;
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    justify-content: space-between;
+    font-size: 2em;
+    width: auto;
+  }
+  #selected--zg-ul-select.active {
+    border: 1px solid #111;
+    border-radius: 3px;
+    box-shadow: 0 0 2px #aaa;
+    padding: 0.5em;
+  }
+
+  .filter-item svg {
+    width: 32px;
+    height: 32px;
+  }
+
+  .filter-box {
+    flex-direction: column;
+    margin-top: 10px;
+    position: absolute;
+    z-index: 1;
+    background-color: #fff;
+  }
+
+  .cardList-wrapper {
+    margin-top: 80px;
+  }
+
+  /*---------------------------------------*/
   .cardNav__list {
     grid-template: repeat(6, 1fr)/repeat(1, 1fr);
   }
 
   /*---------------------------------------*/
-  .footer__form-input {
-    padding: 8px 0 8px 2px;
-  }
-
   .cardList-arrow {
     display: none;
+  }
+
+  /*---------------------------------------*/
+  .footer__top-inner {
+    margin: 0;
+  }
+
+  .footer__top-col {
+    display: none;
+  }
+
+  .footer__socials {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer__botton {
+    padding-top: 30px;
+  }
+
+  .footer__botton-inner {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer__botton-link {
+    margin-bottom: 10px;
+  }
+
+  .footer__botton-link:last-child {
+    margin-bottom: 0;
   }
 }
 
